fetch API covered

--- a/JS Mastery Bootcamp/Alpha Batch/index.html
+++ b/JS Mastery Bootcamp/Alpha Batch/index.html
@@ -18,12 +18,81 @@
         background-color: orange;
       }
       .cont3 {
-        background-color: purple;
+        background-color: burlywood;
+      }
+      table{
+        border: 1px solid black;
+        border-collapse: collapse;
+      }
+      th, td{
+        border: 1px solid black;
+        padding: 5px;
       }
     </style>
   </head>
   <body>
     <h1 class="cont4 cont2 cont3" id="headEle">JS Mastery Bootcamp</h1>
+    <table style="text-align: center;">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>userName</th>
+          <th>mail_id</th>
+        </tr>
+      </thead>
+      <tbody id="table_body">
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
     <!-- <img src="" alt="">
     <img src="" alt="">
     <img src="" alt="">
@@ -53,7 +122,7 @@
     <button oncontextmenu="show_message()">
         Show Message
     </button> -->
-    <span></span>
+    <!-- <span></span>
     <div class="parent">
       <div class="cont1">
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo veritatis
@@ -91,7 +160,7 @@
         <br /><br />
         <img src="https://www.qxlabs.com/img/logo.svg" width="200" alt="" />
       </div>
-    </div>
+    </div> -->
 
     <!-- <div class="parent2">
       <div class="cont5">
