--- a/JS Mastery Bootcamp/Bravo Batch/index.html
+++ b/JS Mastery Bootcamp/Bravo Batch/index.html
@@ -25,6 +25,7 @@
 <body>
     <h1>JS Mastery Bootcamp</h1>
 
+    <button id="fetch_btn">Fetch API</button>
     <div class="parent">
         <div class="box1">
             <span>Lorem ipsum dolor sit amet.</span>
