--- a/JS Mastery Bootcamp/Charlie Batch/index.html
+++ b/JS Mastery Bootcamp/Charlie Batch/index.html
@@ -14,10 +14,34 @@
       .container {
         background-color: darkgoldenrod;
       }
+      table{
+        border: 1px solid black;
+        border-collapse: collapse;
+        text-align: center;
+      }
+      th, td{
+        border: 1px solid black;
+        padding: 10px;
+      }
     </style>
   </head>
   <body>
     <h1>JS Mastery Bootcamp</h1>
+
+    <table>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>UserName</th>
+          <th>UserMail</th>
+          <th>UserPhone</th>
+          <th>UserWeb</th>
+        </tr>
+      </thead>
+      <tbody id="tableBody">
+        
+      </tbody>
+    </table>
 
     <div class="parent">
       <div class="box1">
