--- a/JS Mastery Bootcamp/Alpha Batch/index.html
+++ b/JS Mastery Bootcamp/Alpha Batch/index.html
@@ -32,7 +32,8 @@
   </head>
   <body>
     <h1 class="cont4 cont2 cont3" id="headEle">JS Mastery Bootcamp</h1>
-    <table style="text-align: center;">
+    <button id="fetch_btn">Fetch Data</button>
+    <!-- <table style="text-align: center;">
       <thead>
         <tr>
           <th>Name</th>
@@ -92,7 +93,7 @@
           <td></td>
         </tr>
       </tbody>
-    </table>
+    </table> -->
     <!-- <img src="" alt="">
     <img src="" alt="">
     <img src="" alt="">
